--- a/src/styles/topnav.css
+++ b/src/styles/topnav.css
@@ -1,6 +1,6 @@
 header {
 	display: flex;
-	background-color: #d9d9d9;
+	background-color: #a6a6a6;
 	padding: 20px;
 	justify-content: flex-end;
 }
