--- a/src/styles/topnav.css
+++ b/src/styles/topnav.css
@@ -24,6 +24,11 @@ header {
 	text-decoration: none;
 	margin-right: 20px;
 	color: black;
+	font-size: large;
+}
+
+a:hover {
+	color: #a51d37;
 }
 
 .book-link-style {
