added logo to header/footer. Need to reduce size in header so navbar isnt as big

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -10,3 +10,9 @@ footer {
 	padding: 20px;
 	background-color: #fde4de;
 }
+
+.logo-image {
+	width: 5%;
+	margin-right: auto;
+	padding-right: 200px;
+}
