--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,10 @@
 /* App.css */
 
+@font-face {
+	font-family: "Lobster";
+	src: url("../assets/fonts/Lobster-Regular.ttf");
+}
+
 html,
 body {
 	width: 100%;
