--- a/src/styles/topnav.css
+++ b/src/styles/topnav.css
@@ -1,7 +1,8 @@
 header {
 	display: flex;
-	background-color: #a6a6a6;
-	padding: 12px;
+	/* background-color: #fde4de; */
+	background-color: white;
+	padding: 2px;
 	justify-content: flex-end;
 	position: sticky;
 	top: 0;
@@ -10,6 +11,7 @@ header {
 .top-nav {
 	display: flex;
 	align-items: center;
+	font-family: "Lobster";
 }
 
 .nav-list {
