--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -6,16 +6,17 @@
 
 .home-container {
 	background-color: #a51d37;
-	margin-bottom: 100px;
+
 	padding-top: 50px;
 	padding-bottom: 50px;
 	text-align: center;
 }
 
 .home-image {
-	border-radius: 50%;
+	border-radius: 48%;
 	width: 55%;
 	height: auto;
+	border: solid 10px #fde4de;
 }
 
 .home-title {
@@ -27,26 +28,35 @@
 
 .main-container {
 	display: flex;
-	border-color: green;
 	padding: 50px;
 	border: 10px;
 }
 
 .main-container div {
-	border: solid yellow 10px;
 	margin-bottom: 50px;
 }
 
 .main-container p {
 	max-width: 80%;
-	border-color: black;
-	border: solid 10px;
-	text-align: center;
+	margin: auto;
+
+	border: solid 5px #a51d37;
+	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+		sans-serif;
 }
 
 .testimonial-title {
 	font-family: "Lobster";
 	text-align: center;
 	font-size: 3em;
-	margin-top: -40px;
+}
+
+.title-rows {
+	text-decoration: underline;
+	font-size: 1em;
+	font-family: "Lobster";
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	margin-bottom: -20px;
 }
