--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -7,7 +7,7 @@
 .home-container {
 	background-color: #a51d37;
 
-	padding-top: 50px;
+	/* padding-top: 50px; */
 	padding-bottom: 50px;
 	text-align: center;
 }
