--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,1 +1,49 @@
+.services-container {
+	display: flex;
+	border: 10px solid;
+	flex-direction: column;
+	text-align: center;
+}
 
+.services-container div {
+	border: 10px solid #a51d37;
+	padding: 30px;
+}
+
+h1 {
+	text-align: center;
+	font-family: "Lobster";
+	font-size: 3em;
+}
+
+h2 {
+	font-family: "Lobster";
+	background-color: #a51d37;
+}
+
+li {
+	background-color: #a51d37;
+	padding: 4px;
+	text-align: left;
+}
+
+.service-icons {
+	text-align: end;
+	margin-bottom: auto;
+	margin-top: 0;
+	padding-right: 30px;
+	font-size: 3em;
+}
+
+.history-container {
+	border-radius: 20%;
+	text-align: center;
+}
+
+p {
+	padding-left: 50px;
+	padding-right: 50px;
+	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+		sans-serif;
+	font-size: 20px;
+}
