--- a/src/styles/topnav.css
+++ b/src/styles/topnav.css
@@ -12,12 +12,14 @@ header {
 	display: flex;
 	align-items: center;
 	font-family: "Lobster";
+	background-color: white;
 }
 
 .nav-list {
 	list-style: none;
 	padding-right: 100px;
 	margin: 0;
+	background-color: white;
 }
 
 .nav-list li {
