--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,12 +1,10 @@
 .services-container {
 	display: flex;
-	border: 10px solid;
 	flex-direction: column;
 	text-align: center;
 }
 
 .services-container div {
-	border: 10px solid #a51d37;
 	padding: 30px;
 }
 
@@ -18,11 +16,9 @@ h1 {
 
 h2 {
 	font-family: "Lobster";
-	background-color: #a51d37;
 }
 
 li {
-	background-color: #a51d37;
 	padding: 4px;
 	text-align: left;
 }
@@ -36,14 +32,37 @@ li {
 }
 
 .history-container {
-	border-radius: 20%;
-	text-align: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	border: solid 8px #a51d37;
+	border-radius: 30%;
+	box-shadow: 5px 5px #a51d37;
+	margin-left: 5%;
+	margin-right: 5%;
 }
 
 p {
-	padding-left: 50px;
-	padding-right: 50px;
+	max-width: 80%;
 	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
 		sans-serif;
 	font-size: 20px;
+}
+
+.service {
+	display: flex;
+	justify-content: flex-start;
+	border-radius: 30%;
+	max-width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 40px;
+	font-size: 20px;
+	padding: 30px;
+	border: solid 8px #a51d37;
+	border-radius: 20%;
+	box-shadow: 5px 5px #a51d37;
+	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+		sans-serif;
 }
