--- a/src/styles/signup.css
+++ b/src/styles/signup.css
@@ -1,4 +1,21 @@
-.login-container {
+.login-link {
+	background-color: #a51d37;
+	color: #fff;
+	padding: 10px 15px;
+	border: none;
+	border-radius: 4px;
+	text-decoration: none;
+	display: inline-block;
+	cursor: pointer;
+	margin-left: 60px;
+}
+
+.login-link:hover {
+	background-color: #86172b;
+	color: white;
+}
+
+.signup-container {
 	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
 		sans-serif;
 	display: flex;
@@ -7,13 +24,14 @@
 	justify-content: center;
 }
 
-.login-form {
+.signup-form {
 	width: 300px;
 	background-color: #fff;
 	padding: 20px;
 	border-radius: 8px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 	margin-top: 20px;
+	margin-bottom: 10%;
 }
 
 label {
@@ -28,31 +46,4 @@ input {
 	box-sizing: border-box;
 	border: 1px solid #ccc;
 	border-radius: 4px;
-	background-color: rgba(252, 228, 222, 0.4);
-}
-
-.buttons-container {
-	display: flex;
-	justify-content: space-between;
-}
-
-button,
-.signup-link {
-	background-color: #a51d37;
-	color: #fff;
-	padding: 10px 15px;
-	border: none;
-	border-radius: 4px;
-	cursor: pointer;
-	text-decoration: none;
-}
-
-button:hover {
-	background-color: #86172b;
-	color: white;
-}
-
-.signup-link:hover {
-	background-color: #86172b;
-	color: white;
 }
