--- a/src/styles/booking.css
+++ b/src/styles/booking.css
@@ -15,3 +15,18 @@
 .room-image.selected {
 	border: 3px solid #a51d37;
 }
+
+.booking-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-top: 0px;
+}
+
+.pet-detail-form {
+	margin-top: 0px;
+	margin-bottom: 40px;
+	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+		sans-serif;
+	border: solid 5px #a51d37;
+}
