--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -46,11 +46,17 @@ textarea:focus {
 .form-container {
 	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
 		sans-serif;
-	padding: 0;
+	padding: 15px;
 	box-sizing: border-box;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	border: solid 5px #a51d37;
+	width: fit-content;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: whitesmoke;
+	border-radius: 15%;
 }
 
 .contact-info-message {
