--- a/src/styles/booking.css
+++ b/src/styles/booking.css
@@ -25,8 +25,13 @@
 
 .pet-detail-form {
 	margin-top: 0px;
-	margin-bottom: 40px;
+	margin-bottom: 50px;
 	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
 		sans-serif;
 	border: solid 5px #a51d37;
+	width: 300px;
+	background-color: #fff;
+	padding: 25px;
+	border-radius: 8px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
