--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,3 +1,12 @@
+form {
+	width: 300px;
+	background-color: #fff;
+	padding: 25px;
+	border-radius: 8px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	margin-top: 80px;
+}
+
 .form-container {
 	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
 		sans-serif;
