--- a/src/styles/booking.css
+++ b/src/styles/booking.css
@@ -1,19 +1,40 @@
 .room-image {
 	width: 50%;
-	height: 100%;
 	border-radius: 10px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+	margin-left: 25%;
+}
+
+.room-description-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-top: 25px;
+	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+		sans-serif;
 }
 
 .room-selection-container {
 	display: flex;
 	flex-direction: row;
-	justify-content: space-around;
 	align-items: center;
+	margin-top: 50px;
 }
 
 .room-image.selected {
 	border: 3px solid #a51d37;
+}
+
+.room-buttons {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	padding-bottom: 40px;
+}
+.submit-button {
+	margin-left: 15px;
+	padding-left: 30px;
+	padding-right: 30px;
 }
 
 .booking-container {
