--- a/src/styles/booking.css
+++ b/src/styles/booking.css
@@ -25,7 +25,7 @@
 	border: 3px solid #a51d37;
 }
 
-.room-buttons {
+.submit-buttons {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
@@ -55,4 +55,65 @@
 	padding: 25px;
 	border-radius: 8px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Calender css section */
+.calender-container {
+	display: flex;
+	justify-content: center;
+	padding: 20px;
+}
+
+/* Summary css */
+.summary-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	margin: 20px;
+	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+		sans-serif;
+}
+
+.pet-details,
+.room-selection,
+.date-details,
+.total-cost {
+	margin-bottom: 20px;
+}
+
+.pet-details,
+.room-selection,
+.date-details,
+.total-cost {
+	border: 1px solid #ccc;
+	padding: 20px;
+	width: 80%;
+	max-width: 600px;
+	background-color: #fff;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+h2,
+h3 {
+	color: #1c1b1b;
+}
+
+strong {
+	color: #a51d37;
+}
+
+/* Confirmation css */
+.confirmation-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+		sans-serif;
+}
+
+.confirm-message {
+	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+		sans-serif;
 }
